--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <nav>
-        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
-        <ul>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Blog</a></li>
-            <li><Button class="btn-primary">Hire Me</Button></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <nav >
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><Button class="btn-primary">Hire Me</Button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h3 class="gretting-text">Hi, I  am</h3>
+                <h1 class ="banner-title">Mary Hardy</h1>
+                <p class="banner-paragraph">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-picture" src="assets/images/hardy.png" alt="">
+        </div>
+    </header>
 </body>
 </html>
