--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="banner-content">
                 <h3 class="gretting-text">Hi, I  am</h3>
                 <h1 class ="banner-title">Mary Hardy</h1>
                 <p class="banner-paragraph">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
@@ -31,5 +31,131 @@
             <img class="profile-picture" src="assets/images/hardy.png" alt="">
         </div>
     </header>
+    <main>
+        <div class="about">
+            <h3 class="section">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Mary Hardy </p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-description">1987</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Los Angles</p>
+                </div>
+            </div>
+        </div>
+        <section >
+            <h3 class="section-title">What i do</h3>
+            <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+           <div class="skill-container">
+                <div class="skill">
+                    <img src="assets/images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="assets/images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="assets/images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="assets/images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+           </div>
+        </section>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                        <h3 class="resume-column-title">My Education</h3>
+                        <div class="resume-item">
+                            <h2 class="resume-iteam-title">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institutue">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-iteam-title">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institutue">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-iteam-title">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institutue">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                </div>
+                <div class="resume-column">
+                        <h3 class="resume-column-title">My Experience</h3>
+                        <div class="resume-item">
+                            <h2 class="resume-iteam-title">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institutue">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-iteam-title">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institutue">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-iteam-title">Master in Computer Engineering</h2>
+                            <h3 class="resume-item-institutue">Harvard University / 2015 - 2017</h3>
+                            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+
+                </div>
+            </div>
+            <div class="download-resume">
+                <button class="btn-primary"> Download CV</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-link">
+                <a href=""><img src="assets/images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="assets/images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="assets/images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text", placeholder="Your Name">
+                <input type="email", placeholder="Your Email">
+                <textarea name="" id="" cols="30", rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
